--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,4 +324,14 @@ footer {
         padding-left: 20px;
         padding-right: 20px;
     }
+
+    #photos {
+        column-count: 3;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
 }
